# swapk-exam

./: ..gitignore.swp  CMakeCache.txt  CMakeLists.txt  Dispatcher.h  ExceptionHandler.h  HTTPCall.h  HTTPParser.h  HttpRequest.h  Makefile  README.md  RESTBuilder.cpp  RESTBuilder.h  SocketConnection.cpp  SocketListener.cpp  SocketListener.h  cleanup.sh  cmake_install.cmake  main.cpp  swapk_exam  test.sh
Controllers/: WeatherController.cpp  WeatherController.h
Dispathcer/: Dispatcher.cpp  Dispatcher.h  hasGet.h
ExecptionHandling/: ExeptionHandling.cpp  ExeptionHandling.h
HttpTypes/: HttpCall.h  HttpCallParser.h  HttpRequest.h  HttpResponse.h
controller-examples/: WeatherController.cpp  WeatherController.h
dispatch/: Dispatcher.cpp  Dispatcher.h  detect.h  hasDelete.h  hasPath.h  hasPost.h  hasPut.h
exception/: ExceptionHandler.cpp  ExceptionHandler.h  ExceptionHandling.cpp  ExceptionHandling.h
exception/defaults/: endpoint_not_found_exception.cpp  endpoint_not_found_exception.h  method_not_allowed_exception.cpp  method_not_allowed_exception.h  parse_failure_exception.cpp  parse_failure_exception.h
http/: HTTPCall.h  HTTPCallHandler.cpp  HTTPCallHandler.h  HTTPCallParser.cpp  HTTPCallParser.h  HTTPEnums.cpp  HTTPEnums.h  HTTPRequest.h  HTTPResponse.h  HttpCall.h  HttpCallParser.h  HttpRequest.h  HttpResponse.h
http/details/: HTTPCallHandler.cpp  HTTPCallHandler.h  HTTPCallHandlerImpl.cpp  HTTPCallHandlerImpl.h
http/interceptor/: HTTPInterceptor.h  hasIntercept.h
meta/: detect.h  hasDelete.h  hasGet.h  hasIntercept.h  hasPath.h  hasPost.h  hasPut.h
restbuilder/: REST.cpp  REST.h  RESTBuilder.cpp  RESTBuilder.h
socket/: SocketConnection.cpp  SocketConnection.h  SocketListener.cpp  SocketListener.h  SocketManager.cpp  SocketManager.h
